--- a/docs/extra.css
+++ b/docs/extra.css
@@ -2,3 +2,8 @@ blockquote {
     border-left: .25em solid #2980b9;
     padding: 0 1em;
 }
+
+h5 {
+    margin-block-start: 2.5em;
+    margin-block-end: 0.5em;
+}
