--- a/docs/extra.css
+++ b/docs/extra.css
@@ -8,3 +8,26 @@ h5 {
     margin-block-start: 2.5em;
     margin-block-end: 0.5em;
 }
+
+.title{
+    font-size: 1em;
+    font-weight: normal;
+    text-shadow: 2px 2px 2px #00000047;
+}
+
+.title_accent{
+    font-size: 1.5em;
+    text-shadow: 2px 2px 2px #00000054;
+    color: #2980b9;
+}
+
+.desc{
+    box-shadow: 2px 2px 5px #00000054;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    margin-left: 0px;
+}
+
+.desc p {
+    margin-botton:0px;
+}
