--- a/docs/extra.css
+++ b/docs/extra.css
@@ -25,7 +25,7 @@ h5 {
     box-shadow: 2px 2px 5px #00000054;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
-    margin-left: 0px;
+    margin-left: 0px !important;
 }
 
 .desc p {
