--- a/docs/extra.css
+++ b/docs/extra.css
@@ -39,6 +39,8 @@ hr {
 }
 
 .code_accent{
-    border-left:3px solid;
+    border-left:3px solid #2980b9;
     font-size:0.9em;
+    border: solid 1px #2980b9;
+    color: #2980b9;
 }
