--- a/docs/extra.css
+++ b/docs/extra.css
@@ -32,6 +32,7 @@ h5 {
 
 code {
     font-size: 0.8em;
+    color: #2980b9;
 }
 
 hr {
@@ -39,8 +40,8 @@ hr {
 }
 
 .code_accent{
+    border: solid 1px #2980b9;
     border-left:3px solid #2980b9;
     font-size:0.9em;
-    border: solid 1px #2980b9;
     color: #2980b9;
 }
